# z1000

./: CLAUDE.md  CMakeLists.txt  ENTITY_CREATION_GUIDE.md  imgui.ini
levels/: new_level.json  saved_level.json  test_level.json
src/: DataTypes.h  dynamicArray.h  main.cpp  zayn.cpp  zayn.h
src/game/: game.cpp  game.h
src/game/entities/: LightEntity.h  LightSourceEntity.cpp  LightSourceEntity.h  PropEntity.h  TriggerEntity.h  WallEntity.cpp  WallEntity.h
src/managers/: camera.cpp  camera.h  input.cpp  input.h  level_editor.cpp  level_editor.h  level_manager.cpp  level_manager.h  lighting.cpp  lighting.h  memory.cpp  memory.h  time.cpp  time.h  window.cpp  window.h
src/managers/factory/: components_factory.cpp  components_factory.h  entity_factory.cpp  entity_factory.h  material_factory.cpp  material_factory.h  mesh_factory.cpp  mesh_factory.h  texture_factory.cpp  texture_factory.h
src/managers/factory/components/: components.cpp  components.h  material_components.cpp  material_components.h  mesh_components.cpp  mesh_components.h  render_component.cpp  render_component.h  (+2 more)
src/managers/render/: render.cpp  render.h  render_metal.cpp  render_opengl.cpp  render_vulkan.cpp  render_vulkan.h  render_vulkan_core.cpp  render_vulkan_functions.h  render_vulkan_imgui.cpp  render_vulkan_init.cpp  render_vulkan_main.cpp  render_vulkan_original.cpp  render_vulkan_pipeline.cpp  render_vulkan_resources.cpp
src/math/: math.h  matrix.h  quaternion.h  rand.h  scalar.h  vector.h
tools/: README_blender_export.md  blender_export.py  blender_level_exporter.py  z1000_export.py
(+9 files in other folders)
